		* New backtrace output with demangled function names, file
		  names and line numbers, when possible.
		* Initial (not functional yet) SOCKS5 proxy support.
		* Initial (not functional yet) SOCKS4 proxy support.
		* Initial (not functional yet) HTTP proxy support.
		* Updated some tests in configure.in.

	GonoszTopi:
		* Initial work on EC protocol version 2.0.

        Special Thanks To:

                * Bug and feature reporters:
		  Sir,		jolupa,
		  Pableron,	Banerjee,
		  m2kio,	juanii,
		  jaguarwan,	kdka

		* Contributors:
		  Frankk,	han,
		  Vollstrecker, boutros,
		  skolnick,

                * Everyone at:
                   #amule       irc.freenode.net
                   wiki         http://wiki.amule.org
                   forums       http://forum.amule.org
                   bugtracker   http://abugs.amule.org

                * All aMule users!!!

	Welcome our new aMule team member: nachbarnebenan (Tester)


--------------------------------------------------------------------------------

Version 2.0.0rc7 - The "99,6% Final" version.
----------
2004-10-19

	bisley:
		* Added session ratio and total ratio to XAS

	deltaHF:
	        * Got back from hell and changed one icon on the GUI ;)

	Jacobo221:
		aMule GUI:
		* Fixed two almost-the-same bugs when clicked download button 
		  and no items where selected (as reported by powtrix/willy,
		  thanks).

		aMuleWeb:
		* Fixed a bug where up/down limits woudln't be displayed 
		  correctly if their string length were different.

		aMuleCMD:
		* Added 'list' (or 'find') command to search for a file in
		  the downloads queue by name or by number (or just show all).
		* Added the ability to resume/pause all downloads at the same 
		  time through amulecmd (very handy when all downloads have
		  been paused due to lack of space).
		* Fixed two bugs on amulecmd by which using 'pause' or 'resume'
		  without arguments would pause/resume the oldest download.