@@ -515,7 +515,7 @@ enum {
 	 *	::EC_TAG_SERVER_USERS\n
 	 *	::EC_TAG_SERVER_USERS_MAX\n
 	 *	::EC_TAG_SERVER_FILES\n
-	 *	::EC_TAG_SERVER_PREF\n
+	 *	::EC_TAG_SERVER_PRIO\n
 	 *	::EC_TAG_SERVER_FAILED\n
 	 *	::EC_TAG_SERVER_STATIC\n
 	 *	::EC_TAG_SERVER_VERSION
@@ -529,13 +529,13 @@ enum {
 	EC_TAG_SERVER_USERS,		///< (\c uint32) User count. Default: N/A.
 	EC_TAG_SERVER_USERS_MAX,	///< (\c uint32) Max. user count. Default: N/A.
 	EC_TAG_SERVER_FILES,		///< (\c uint32) File count. Default: N/A.
-	EC_TAG_SERVER_PREF,		///< (\c uint8) Server preference (priority). Default: SRV_PR_NORMAL (normal)
+	EC_TAG_SERVER_PRIO,		///< (\c uint8) Server priority. Default: SRV_PR_NORMAL (normal)
 					/*!< <ul>
 						<li>SRV_PR_LOW - Low Priority</li>
 						<li>SRV_PR_NORMAL - Normal</li>
 						<li>SRV_PR_HIGH - High Priority</li>
-						<li>anything else - No Preferences</li>
 						</ul>
+
 						Look into KnownFile.h for the SRV_PR_* values.
 					*/
 	EC_TAG_SERVER_FAILED,		///< (\c uint8) Fail count. Default: 0
