@@ -48,6 +48,11 @@ Version 2.0.0rc8 - The "???????????" version.
 
 	GonoszTopi:
 		* Initial work on EC protocol version 2.0.
+		* Fixed a crash on broken language files (.po)
+		* Some GUI cosmetics.
+		* Lots of translation fixes.
+		* As a side effect, fixed the "Any" search in webserver.
+		* Fixed webserver connection with empty passwords :)
 
         Special Thanks To:
 
@@ -66,7 +71,7 @@ Version 2.0.0rc8 - The "???????????" version.
                    #amule       irc.freenode.net
                    wiki         http://wiki.amule.org
                    forums       http://forum.amule.org
-                   bugtracker   http://abugs.amule.org
+                   bugtracker   http://bugs.amule.org
 
                 * All aMule users!!!
 
